# ardeck-studio

./: .prettierrc  INSTALL.md  README.md  ardeck-studio.code-workspace  bun.lockb  index.css  index.html  package.json  tailwind.config.js
.cargo/: config.toml
public/theme/: d1sc0rd-dark.json  default-dark.json  default-light.json  default.json  fk-neon.json  kawaii-blue.json  kawaii-light.json  party.json
src/: App.tsx  ForDev.tsx  main.css  main.tsx  router.tsx  window_main.tsx
src-tauri/: Cargo.toml  position.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ardeck.rs  ardeck_data.rs  ardeck_serial.rs  ardeck_studio.rs  lib.rs  main.rs  service.rs
src-tauri/src/ardeck/: ardeck_data.rs  ardeck_serial.rs  plugin.rs  serial.rs
src-tauri/src/ardeck/plugin/: plugin_core.rs  plugin_document_0.0.x.md  plugin_manager.rs
src-tauri/src/ardeck/serial/: data.rs
src-tauri/src/ardeck/service/: settings.rs
src-tauri/src/ardeck_serial/: ardeck_data.rs
src-tauri/src/ardeck_studio/: action.rs  ardeck.rs  config.rs  plugin.rs  service.rs  settings.rs  switch_info.rs
src-tauri/src/ardeck_studio/action/: action_map.rs  action_target.rs  compare.rs  map.rs
src-tauri/src/ardeck_studio/ardeck/: command.rs  core.rs  data.rs  manager.rs  tauri.rs
src-tauri/src/ardeck_studio/config/: ardeck.rs  plugin.rs
src-tauri/src/ardeck_studio/plugin/: config_singleton.rs  core.rs  manager.rs  plugin_document_0.0.x.md  server.rs  tauri.rs
src-tauri/src/ardeck_studio/service/: config.rs  dir.rs  settings.rs
src-tauri/src/ardeck_studio/settings/: ardeck.rs  ardeck_studio.rs  cache.rs  definitions.rs  format.rs  mapping_presets.rs  plugin.rs  service.rs  tauri.rs
src-tauri/src/ardeck_studio/settings/definitions/: ardeck.rs  ardeck_studio.rs  mapping_presets.rs  plugin.rs
src-tauri/src/ardeck_studio/settings/format/: mapping_presets.rs
src-tauri/src/ardeck_studio/settings/service/: store.rs
src-tauri/src/ardeck_studio/switch_info/: compare.rs
src-tauri/src/service/: dir.rs  file.rs
src-tauri/src/util/: manager.rs
src/component/: ActionMappingForm.tsx  Settings.tsx  TitleBar.tsx  WindowTheme.tsx  popup.tsx
src/lib/: ardeck.ts  plugin.ts
src/pages/_component/: AppNavLink.tsx  Button.tsx  ModalWindow.tsx
src/pages/_component/back_to_prev/: index.tsx
src/pages/_component/back_to_root/: index.tsx
src/pages/_component/form/: Input.tsx  Select.tsx
src/pages/_component/loading/: legacy.tsx
src/pages/about/: authors.tsx  index.tsx  license.tsx
src/pages/config/: index.tsx
src/pages/devices/: DeviceSetting.tsx  index.tsx
src/pages/mapping/: MappingSetting.tsx  index.tsx
src/pages/plugin/: PluginActions.tsx  index.tsx
src/tauri/: invoke.ts  listen.ts  settings.ts
src/types/: ardeck.ts  serialport.d.ts  settings.ts
src/util/: props.ts
