[package]
name = "ardeck"
version = "0.0.8"
description = "ARDeck Control Center"
authors = ["akurakuu", "sekurosu-daimajin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
tauri = { version = "1", features = [ "window-hide", "window-start-dragging", "window-close", "window-minimize", "window-unminimize", "window-unmaximize", "window-show", "window-maximize", "system-tray", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
window-shadows = "0.2.2"
serialport = {version = "4.3.0", features = ["serde"] }
chrono = "0.4.38"
libloading = "0.8.4"
once_cell = "1.19.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
