[package]
name = "ardeck"
version = "0.1.4"
description = "ARDeck Control Center"
authors = ["akurakuu", "sekurosu-daimajin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
tauri = { version = "1", features = [ "window-hide", "window-start-dragging", "window-close", "window-minimize", "window-unminimize", "window-unmaximize", "window-show", "window-maximize", "system-tray", "shell-open"] }
# tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

tokio-tungstenite = "*"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
window-shadows = "0.2.2"
serialport = {version = "4.3.0", features = ["serde"] }
chrono = "0.4.38"
once_cell = "1.19.0"
dirs = "5.0.1"
struct-field-names-as-array = "0.3.0"
derive_builder = "0.20.2"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
portable = [] # Portable version of the app: config file is saved in the app directory
